# Cargo.toml (workspace root)
[workspace]
members = [
    "jito-protos", "searcher-engine", "common-utils"
]

[workspace.dependencies]
bincode       = "1.3"
prost = "0.12"
prost-build     = "0.12"
prost-types = "0.12"
tonic = { version = "0.10.0", features = ["tls", "transport"] }
tonic-build     = "0.10"
solana-sdk = "2.1.16"
solana-client = "2.1.16"
dotenv        = "0.15"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
async-stream  = "0.3"
chrono        = { version = "0.4", features = ["serde"] }
log           = "0.4"
env_logger = "0.11"
rustls = "0.20"
tokio-rustls  = "0.23"
tonic-rustls  = "0.2.0"
futures-core = "0.3"
futures-util  = "0.3"
tokio-stream = { version = "0.1.17", features = ["sync"] }
redis         = { version = "0.25", features = ["tokio-comp"] }
prometheus  = "0.14" 
hyper       = { version = "0.14", features = ["full"] } 
lazy_static = "1.4"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }