[package]
name = "common-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
tokio  = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.19"
reqwest       = { workspace = true }
dotenvy = "0.15"
crossbeam-channel = "0.5"
tokio-stream = "0.1.17"
futures-util = "0.3.31"
log           = { workspace = true }
prometheus   = { workspace = true }
lazy_static  = { workspace = true }
hyper        = { workspace = true }