# jito-protos/Cargo.toml
[package]
name = "jito-protos"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bincode       = { workspace = true }
prost         = { workspace = true }
prost-types   = { workspace = true }
tonic         = { workspace = true }
solana-sdk    = { workspace = true }

[build-dependencies]
tonic-build   = { workspace = true }