[package]
name    = "searcher-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "searcher_engine"
path = "src/lib.rs"

[dependencies]
tokio         = { workspace = true }
tonic         = { workspace = true }
prost         = { workspace = true }
prost-types   = { workspace = true }
redis         = { workspace = true }
solana-sdk    = { workspace = true }
bincode       = { workspace = true }
chrono        = { workspace = true }
once_cell     = "1.19"
dotenvy       = "0.15"
env_logger    = "0.11"
log           = "0.4"
tokio-stream  = { workspace = true }
futures-util  = { workspace = true }
lazy_static   = { workspace = true }
reqwest       = { workspace = true, features = ["blocking"] }
uuid          = { version = "1.17.0", features = ["v4"] }
anyhow        = "1"  
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
hex   = "0.4"   
rand  = { version = "0.9", features = ["std"] }
sha2 = "0.10" 
rayon = "1.8"
bs58 = "0.5"

# Internal Crates
jito-protos   = { path = "../jito-protos" }
common-utils  = { path = "../common-utils" }

[build-dependencies]
tonic-build   = "0.10"